updated pom.xml and added ci

--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.eom</groupId>
-    <artifactId>larry-boardgame</artifactId>
+    <artifactId>tic-tac-toe</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>larry-boardgame</name>
+    <name>tic-tac-toe</name>
     <url>http://maven.apache.org</url>
 
     <properties>
